			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04k: *********************************

BUG: (5/2/06, GVG) Quarter motion button missing in toolbar (Bug #957)
FIX: Added into ToolBar.java. Left off in v8.04j.

IMP/MAN (5/2/06, JKG) Added CVS Page in HTML Manual

BUG: (5/2/06, GVG) Strange clean up of goodDRCdates in Quick.java (no Bugzilla)
FIX: Not cleaning the Data list if only errors.

IMP: (5/2/06, DN) Vector cache is moved from VectorDrawing to a new class as a preparation of
    further redisplay changes.

BUG: (5/2/06, DN) No marking library in bold after cleaning up NCC annotations (Bug #941)
FIX: Move clean up of NCC annotations to CheckAndRepairJob.

BUG: (5/1/06, GVG) Waveform viewer Measurement mode Can't zoom, fit window (Bug #934)
FIX: Initialization problem related to measurements

BUG: (5/1/06, GVG) Print info for selected node doesn't work (Bug #944)
FIX: More problems found. In LENetlister2.printResults(). comparing NodeInst now.

BUG: (5/1/06, GVG) Zoom when plotting HSPICE has wrong cursor (Bug #948)
FIX: WindowContext.setCursor() defined so WaveformWindow would be able to set cursor for each individual wavePanels.
Remove unnecessary calls from wave.Panel to ZoomAndPanListener.setProperCursor(evt)

BUG: (4/28/06, GVG) Snapping problems in Clipboard.copyListToCell after fixing Bug #899.
FIX: Getting arc port information based on new node locations. This should fix 947 and 899.

BUG: (4/27/06, GVG) Exception in printing due to WindowFrame being null (Bug #953)
FIX: Detect wf==null in EditWindow.fireCellHistoryStatus() (dirty fix!)

BUG: (4/26/06, GVG) Get info dialog box remains behind other windows (Bug #949). Affecting only MacOSX apparently.
FIX: Fixing unexpected change done for bug #878.

IMP: (4/25/06, GVG) Aligning metals based on maximum numbers assigned to reserved tracks and spacing values in 